* $wgHtml5 is no longer used by core. Setting it to false will no longer disable HTML5.
  It is still set to true for extension compatibility but doing so in extensions is deprecated.
* $wgXhtmlDefaultNamespace is no longer used by core. Setting it will no longer change the
  xmlns used by MediaWiki. Reliance on this variable by extensions is deprecated.

=== New features in 1.22 ===
* (bug 44525) mediawiki.jqueryMsg can now parse (whitelisted) HTML elements and attributes.
* (bug 33454) Language::sprintfDate now has a timezone parameter, and supports
  the "eIOPTZ" formatting characters.
* EditWarning: A warning is shown when an editor leaves the edit form without
  saving (enabled by default, users can opt-out via the 'useeditwarning'
  preference). This feature was moved from the Vector extension, and is now part
  of core for all skins. Take care when upgrading that you don't use an older
  version of the Vector extension as this feature may conflict.
* New 'mediawiki.ui' CSS module providing mw-ui-* styles for buttons and a
  compact vertical form layout.
* New versions of login (Special:UserLogin) and create account
  (Special:UserLogin/signup) forms. They are opt-in for now, controlled by
  the $wgUseVFormUserLogin and $wgUseVFormCreateAccount settings or a 'useNew'
  URL parameter trigger.
* (bug 23343) Implemented ability to apply IP blocks to the contents of X-Forwarded-For headers
  by adding a new configuration variable $wgApplyIpBlocksToXff (disabled by default).
* The new hook 'APIGetPossibleErrors' to modify the list of possible errors was
  added.
* (bug 25592) LogEventsList::showLogExtract() will now ignore various
  Pager-related WebRequest parameters by default, as this is overwhelmingly
  likely to be what was intended by users of the method. If any caller wishes
  to use these parameters, the new param 'useRequestParams' may be set to true.
* mw.util.addPortletLink: Tooltip is no longer required to be plain (without