@@ -557,7 +557,8 @@ $wgMessageStructure = array(
 		'resetpass',
 		'resetpass_announce',
 		'resetpass_text',
-		'resetpass_header',
+		'changepassword-legend',
+		'changepassword-text',
 		'oldpassword',
 		'newpassword',
 		'retypenew',
